[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-action-guard-a2a"
version = "0.1.0"
description = "A classifier for AI agent actions to determine if they are harmful or safe."
authors = [
    {name = "Praneeth Vadlapati", email = "praneeth.vad@gmail.com"},
]
dependencies = [
    "python-a2a",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_action_guard_a2a*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
agent_action_guard_a2a = ["*.pt", "*.json", "requirements.txt"]
